--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="container">
-    <div class="mx-auto d-flex flex-row align-items-center py-3 color">
+    <div class="mx-auto d-flex flex-row align-items-center py-3 color gap-5">
       <a class="d-flex align-items-center">
         <svg
           width="30"
@@ -79,12 +79,12 @@
       </a>
 
       <div class="ml-auto d-flex flex-column flex-lg-row align-items-end gap-5">
-        <p class="text-button">Developers & Companies</p>
-        <p class="text-button">Creators</p>
-        <p class="text-button">About Us</p>
-        <p class="text-button">Contact</p>
-        <p class="text-button" routerLink="/blog">Blog</p>
-        <p class="btn btn-outline-light m-auto">Sign in to SHARE</p>
+        <p class="text-button underline-on-hover d-none d-lg-block">Developers & Companies</p>
+        <p class="text-button underline-on-hover  d-none d-lg-block">Creators</p>
+        <p class="text-button underline-on-hover d-none d-lg-block">About Us</p>
+        <p class="text-button  underline-on-hover  d-none d-lg-block">Contact</p>
+        <p class="text-button  underline-on-hover  d-none d-lg-block">Blog</p>
+        <p class="btn btn-outline-light m-auto  d-none d-lg-block ">Sign in to SHARE</p>
       </div>
     </div>
   </div>
